--- a/Lab1_Problema3/pCounter.qsf
+++ b/Lab1_Problema3/pCounter.qsf
@@ -46,3 +46,21 @@ set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name SYSTEMVERILOG_FILE pCounter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pCounter_tb.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (Verilog)"
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH pCounter_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME pCounter_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pCounter_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pCounter_tb -section_id pCounter_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE pCounter_tb.sv -section_id pCounter_tb
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
