--- a/Laboratorio2/ALU.qsf
+++ b/Laboratorio2/ALU.qsf
@@ -56,3 +56,4 @@ set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE SumadorCompleto.sv
 set_global_assignment -name SYSTEMVERILOG_FILE OpSuma.sv
 set_global_assignment -name SYSTEMVERILOG_FILE OpMult.sv
+set_global_assignment -name SYSTEMVERILOG_FILE OpDiv.sv
