--- a/Laboratorio2.2/ALU.qsf
+++ b/Laboratorio2.2/ALU.qsf
@@ -79,3 +79,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
 
 set_global_assignment -name SYSTEMVERILOG_FILE displayConverter.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE registerInput.sv
