--- a/Laboratorio2.2/ALU.qsf
+++ b/Laboratorio2.2/ALU.qsf
@@ -52,17 +52,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name SYSTEMVERILOG_FILE XorModule.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ShiftRight.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ShiftLeft.sv
-set_global_assignment -name SYSTEMVERILOG_FILE OrModule.sv
-set_global_assignment -name SYSTEMVERILOG_FILE AndModule.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
-set_global_assignment -name SYSTEMVERILOG_FILE SumadorCompleto.sv
-set_global_assignment -name SYSTEMVERILOG_FILE OpSuma.sv
-set_global_assignment -name SYSTEMVERILOG_FILE OpMult.sv
-set_global_assignment -name SYSTEMVERILOG_FILE OpDiv.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ALU_tb.sv
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
@@ -74,10 +63,22 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_tb -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
 
-set_global_assignment -name SYSTEMVERILOG_FILE displayConverter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE TimingAnalysisSystem.sv
-set_global_assignment -name SYSTEMVERILOG_FILE registerOutput.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE registerInput.sv
+set_global_assignment -name SYSTEMVERILOG_FILE XorModule.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ShiftRight.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ShiftLeft.sv
+set_global_assignment -name SYSTEMVERILOG_FILE OrModule.sv
+set_global_assignment -name SYSTEMVERILOG_FILE AndModule.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
+set_global_assignment -name SYSTEMVERILOG_FILE SumadorCompleto.sv
+set_global_assignment -name SYSTEMVERILOG_FILE OpSuma.sv
+set_global_assignment -name SYSTEMVERILOG_FILE OpMult.sv
+set_global_assignment -name SYSTEMVERILOG_FILE OpDiv.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE displayConverter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE TimingAnalysisSystem.sv
+set_global_assignment -name SYSTEMVERILOG_FILE registerOutput.sv
