--- a/Laboratorio3/Lab3.qsf
+++ b/Laboratorio3/Lab3.qsf
@@ -55,3 +55,4 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name SYSTEMVERILOG_FILE battleship.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mov_control.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Ppos_ships.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Epos_ships.sv
