--- a/Laboratorio3/Lab3.qsf
+++ b/Laboratorio3/Lab3.qsf
@@ -97,4 +97,77 @@ set_location_assignment PIN_D11 -to vSync
 set_location_assignment PIN_A11 -to clk25
 set_location_assignment PIN_C10 -to syncBlank
 set_location_assignment PIN_F10 -to bSync
+set_global_assignment -name SYSTEMVERILOG_FILE battleship.sv
+set_global_assignment -name SYSTEMVERILOG_FILE battleship_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mov_control.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mov_control_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Ppos_ships.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Ppos_ships_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Epos_ships.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Epos_ships_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE playTimer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE displayConverter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Playerplay.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Playerplay_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Envplay.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Envplay_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE check_win_lose.sv
+set_global_assignment -name SYSTEMVERILOG_FILE check_win_lose_tb.sv
+set_location_assignment PIN_AD10 -to confirm
+set_location_assignment PIN_AE12 -to reset
+set_location_assignment PIN_AB12 -to shipQ[0]
+set_location_assignment PIN_AC12 -to shipQ[1]
+set_location_assignment PIN_AF9 -to shipQ[2]
+set_location_assignment PIN_AA14 -to mov[0]
+set_location_assignment PIN_AA15 -to mov[1]
+set_location_assignment PIN_W15 -to mov[2]
+set_location_assignment PIN_Y16 -to mov[3]
+set_location_assignment PIN_W20 -to x[0]
+set_location_assignment PIN_W21 -to x[1]
+set_location_assignment PIN_Y21 -to x[2]
+set_location_assignment PIN_V16 -to y[0]
+set_location_assignment PIN_W16 -to y[1]
+set_location_assignment PIN_V17 -to y[2]
+set_location_assignment PIN_AE26 -to dispPships[0]
+set_location_assignment PIN_AE27 -to dispPships[1]
+set_location_assignment PIN_AE28 -to dispPships[2]
+set_location_assignment PIN_AG27 -to dispPships[3]
+set_location_assignment PIN_AF28 -to dispPships[4]
+set_location_assignment PIN_AG28 -to dispPships[5]
+set_location_assignment PIN_AH28 -to dispPships[6]
+set_location_assignment PIN_AJ29 -to dispPships[7]
+set_location_assignment PIN_AH29 -to dispPships[8]
+set_location_assignment PIN_AH30 -to dispPships[9]
+set_location_assignment PIN_AG30 -to dispPships[10]
+set_location_assignment PIN_AF29 -to dispPships[11]
+set_location_assignment PIN_AF30 -to dispPships[12]
+set_location_assignment PIN_AD27 -to dispPships[13]
+set_location_assignment PIN_AB23 -to dispCount[0]
+set_location_assignment PIN_AE29 -to dispCount[1]
+set_location_assignment PIN_AD29 -to dispCount[2]
+set_location_assignment PIN_AC28 -to dispCount[3]
+set_location_assignment PIN_AD30 -to dispCount[4]
+set_location_assignment PIN_AC29 -to dispCount[5]
+set_location_assignment PIN_AC30 -to dispCount[6]
+set_location_assignment PIN_AD26 -to dispCount[7]
+set_location_assignment PIN_AC27 -to dispCount[8]
+set_location_assignment PIN_AD25 -to dispCount[9]
+set_location_assignment PIN_AC25 -to dispCount[10]
+set_location_assignment PIN_AB28 -to dispCount[11]
+set_location_assignment PIN_AB25 -to dispCount[12]
+set_location_assignment PIN_AB22 -to dispCount[13]
+set_location_assignment PIN_AA24 -to dispEships[0]
+set_location_assignment PIN_Y23 -to dispEships[1]
+set_location_assignment PIN_Y24 -to dispEships[2]
+set_location_assignment PIN_W22 -to dispEships[3]
+set_location_assignment PIN_W24 -to dispEships[4]
+set_location_assignment PIN_V23 -to dispEships[5]
+set_location_assignment PIN_W25 -to dispEships[6]
+set_location_assignment PIN_V25 -to dispEships[7]
+set_location_assignment PIN_AA28 -to dispEships[8]
+set_location_assignment PIN_Y27 -to dispEships[9]
+set_location_assignment PIN_AB27 -to dispEships[10]
+set_location_assignment PIN_AB26 -to dispEships[11]
+set_location_assignment PIN_AA26 -to dispEships[12]
+set_location_assignment PIN_AA25 -to dispEships[13]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
