--- a/Laboratorio3/Lab3.qsf
+++ b/Laboratorio3/Lab3.qsf
@@ -168,14 +168,19 @@ set_location_assignment PIN_AB26 -to dispEships[11]
 set_location_assignment PIN_AA26 -to dispEships[12]
 set_location_assignment PIN_AA25 -to dispEships[13]
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH battleship_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH BattleshipMain_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME battleship_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id battleship_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME battleship_tb -section_id battleship_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE battleship_tb.sv -section_id battleship_tb
 set_location_assignment PIN_V18 -to state[0]
 set_location_assignment PIN_W17 -to state[1]
 set_location_assignment PIN_W19 -to state[2]
+set_global_assignment -name SYSTEMVERILOG_FILE BattleshipMain_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME BattleshipMain_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id BattleshipMain_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME BattleshipMain_tb -section_id BattleshipMain_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE BattleshipMain_tb.sv -section_id BattleshipMain_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE battleship_tb.sv -section_id battleship_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
